8220272: Window order is not correct when Modality.WINDOW_MODAL

Reviewed-by: kcr, arapte